# mycode

./: .es-config  .gitignore  todo.md
bigdata/hadoop/: .gitignore  DockerFile  hadoop.env  test.rest
cpp/: test2.cpp
cpp/C/: array.c  array.ilk  assert.c  complement_operator.c  function_pass_args_address.c  if-expression.c  logic_operation.c  logical_operators.c  main_arg.c  memory.c  number_type.c  str_learn.c  switch_expression.c  typedef.c  union.c  variable.c  variable_arguments.c
cpp/C/macro/: define_macro.c
cpp/C/pointer/: chain_pointer.c  pointer_shift.c
cpp/C/static/: static_variable.c
cpp/C/struct/: struct_pointer_variable.c
cpp/buildConfig/: BUILD.gn  BUILDCONFIG.gn
cpp/buildConfig/toolchain/: BUILD.gn  v8_toolchain.gn
cpp/config/: cmake_env_path copy.ps1  compiler_env_path.ps1  compiler_lib_path.ps1
cpp/gn/example1/: .gn  BUILD.gn
cpp/syntax/: constexpr.cpp  data-structure.cpp  dynamic-memory.cpp  enums.cc  input-output-with-files.cpp  namevisibility.cpp  preprocessor.cpp  stringstream.cpp  struct.ilk  using.cc
cpp/syntax/class/: class-destructor.cpp  class-move-constructor-assignment.cpp  class-multiple-inheritance.cpp  class-static-member.cpp  class_attribute.cc  class_keyword_using.cc  class_method_override.cc  default_constructor.cpp  explicit_constructor.cpp  this.cc
cpp/syntax/function/: lambda.cc
cpp/syntax/loop/: for.cc
cpp/syntax/multi_file/: base.cc  make.ps1
cpp/syntax/namespace/: using.cpp
cpp/syntax/pointer/: pointer.cpp  pointer_type.cc
cpp/syntax/struct/: using_struct.cc
cpp/syntax/type_cast/: cast.cc
cpp/test/: example.cpp
database/config/: create_win_service.ps1  mariadb_config.ini  setpathenv.ps1  test.ps1
database/mariadb/: Alter_table.sql  New Database.odb  bookstore.sql  create_user.sql  data-analyse.sql  example.sql  general.sql  jinjia-template.sql  join.sql  mydb_c_config.cnf  mysqld0_config.cnf  mysqld1_config.cnf  orderDB.sql  query.sql  restore_root.sql  test_database_practice.sql  test_db.sql  time.sql  tutorial.sql  view.sql
database/minio/: readme.md
database/mongo/: readme.md
database/mysql/: admin.md  backup.md  mysqldc_config.cnf  readme.md
database/mysql/script/: debug.sql  schema.sql  session.sql
database/oracle/database-19c/: install.sh  install_info.sh  preinstall_fs.sh  preinstall_unzip.sh  preinstall_user.sh
design/: cloud.md  eventstream.md  recommendation.md  role.md  video.md
design/melon/: readme.md  schema.dbml
docker/: DockerFile  compose.yaml  install.sh
linux/: readme.md
linux/config/: app_repository.sh  change_partition_permission.sh  ffmpeg.sh  install.sh  install_dbeaver.sh  leetcode_cookie.sh
linux/config/env_config/: myConfig.sh  set_env.sh  test.sh
linux/podman/: readme.md
linux/shell/: commad.md  script.md  shell.md
linux/shell/script/: .helloworld.sh.swp  access_control.sh  awk_learn.sh  command_execution.sh  df_learn.sh  eval.sh  expr.sh  find_learn.sh  helloworld.sh  input.sh  io.sh  netstat_learn.sh  option.sh  print.sh  ps_learn.sh  rpm_learn.sh  string_operation.sh  variable_learn.sh  yum_learn.sh
mac/: .zshrc  config.md  init.sh  readme.md
racket/Essentials of compilation/: compiler.rkt  interp-R0.rkt  interp-R1.rkt  interp-R3.rkt  interp-R6.rkt  interp.rkt  match.rkt  runtime-config.rkt  utilities.rkt
racket/Essentials of compilation/public-student-support-code/: SUBMISSIONS.md  priority_queue.rkt  run-tests.rkt  runtime.c  utilities.rkt
racket/Essentials of compilation/tests/: r1_2.rkt  r2_1.rkt  r2_2.rkt  r3_1.rkt  r5_1.rkt
racket/Essentials of programming/: eopl chapter 1.2  eopl chapter 2.2  eopl chapter 2.bak
racket/Realm of racket/: ch11.rkt  ch5.bak  ch9.rkt  guess.rkt
racket/SICP/: basic_function.bak  basic_function.rkt  picture_language.rkt  sicp 1.2.bak  sicp 1.2.rkt  sicp 1.3.rkt  sicp test.rkt  sicp1_2.rkt  sicp1_3.rkt  sicp1_3_2.rkt  sicp1_3_3.rkt  sicp1_3_4.rkt  test2.rkt
racket/SICP/ch3/: 3-3-3-tables.bak  (+13 more)
racket/config/: racketPathEnv.ps1
racket/frame/: frame.rkt
racket/image/: edge-detection.bak
racket/macro and define-syntax/: hyphenate-names.rkt
racket/seasoned schemer/: ch1.rkt
racket/tutorial/: closure.rkt
racket/web/: http.rkt
ruoyi/: deploy.md
tools/chocolatey/: bin_location_setting.ps1  command.md  install_chocolatey.ps1  install_packages.ps1  packages.config  uninstall_chocolatey.ps1  upgrade_chocolatey.ps1
tools/clash/: install.sh
tools/clashw/: cfw-tun.sh  config.sh  config.yml  install.sh  repair_service.sh  restart.sh  stop_clash_service.sh  tun.sh
tools/docker/: readme.md
tools/elasticsearch/: readme.md  test.es.http
tools/ffmpeg/: aes.key  key.keyinfo  readme.md
tools/git/: command.md  git_clone.sh  git_configuration.sh  rename_master_main.md
tools/gn/: addPath.ps1  add_gn_system_path copy.ps1  remove_gn_env_settings.ps1  test_remove_gn_env_settings.ps1
tools/gradle/: clear_cache.sh  install.sh
tools/hadoop/: hadoop.sh  install.sh  set_env.sh  start.sh
tools/hive/: init.sh
tools/hugo/: readme.md
tools/intellij/: readm.md
tools/java/: install.sh
tools/jdk/: build.md
tools/jenv/: readme.md
tools/jmeter/: install.sh
tools/kafka/: consumer.sh  install.sh  producer.sh  readme.md  start.sh  topic.sh
tools/mac/: .zshrc  readme.md
tools/mariadb/: init.sh
tools/markdown/: markdown.css
tools/nacos/: readme.md
tools/nexus/: readme.md  settings.xml
tools/npm/: readme.md  yarn.md
tools/nvm/: readme.md
tools/openssl/: key.enc  readme.md
tools/plantuml/: config.md  readme.md  test.md
tools/racket/: jupyter_test.ipynb  learning_macro.rkt
tools/redis/: docker-compose.yml  readme.md
tools/rocketmq/: readme.md
tools/ruoyi/: deploy.md
tools/scala/: install-coursier.sh
tools/sdkman/: install.sh
tools/shellclash/: install.sh  start.sh
tools/shortcut/: readme.md
tools/spark/: env.sh  install.sh  readmd.md
tools/tomcat/: install.sh
tools/windows/: 64-bit_Remove_navigation_pane.reg
tools/wireshark/: config.sh  readme.md
windows/: elevation.ps1  path.ps1  remove_context_menu_items.ps1  win_remove_namespace_folders_admin copy.ps1
(+424 files in other folders)
